--- a/WebApp/Views/Shared/_Layout.cshtml
+++ b/WebApp/Views/Shared/_Layout.cshtml
@@ -16,9 +16,10 @@
     <script src="~/MDB Free/js/mdb.min.js"></script>
     <style>
         @@import url('https://fonts.googleapis.com/css?family=Ubuntu&display=swap');
-        body{
+
+        body {
             font-family: 'Ubuntu', sans-serif;
-            font-size: 17px!important;
+            font-size: 17px !important;
         }
 
         .navbar {
@@ -40,6 +41,10 @@
     </style>
 </head>
 <body class="mb-0">
+    <div id="mdb-preloader" class="flex-center">
+        <div id="preloader-markup">
+        </div>
+    </div>
     <header>
         <nav class="navbar navbar-expand-lg navbar-expand-md navbar-toggleable-sm navbar-dark bg-dark fixed-top">
             <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index"><img src="~/img/sennova pequeño.png" height="70%" width="70%" /></a>
@@ -102,7 +107,7 @@
             </div>
             <div class="row">
                 <div class="col text-center mb-2">
-                    <p>Copyright &copy; <b>MarketSENA</b>. Todos los derechos reservados</p> 
+                    <p>Copyright &copy; <b>MarketSENA</b>. Todos los derechos reservados</p>
                     <p>Diseñado por <span>Sennova</span></p>
                 </div>
             </div>
