--- a/WebApp/Views/Plantillas/Industrial.cshtml
+++ b/WebApp/Views/Plantillas/Industrial.cshtml
@@ -498,11 +498,13 @@
         showOffsets: 1,
         noticeOnUnload: 0,
         allowScripts: 1,
-        plugins: ['gjs-preset-webpage'],
+        plugins: ['gjs-preset-webpage', 'grapesjs-plugin-export'],
         pluginsOpts: {
             'gjs-preset-webpage': {
                 // options
-            }
+            },
+
+            'grapesjs-plugin-export': {}
         },
         storageManager: {
             id: 'gjs-',
