--- a/WebApp/Views/Plantillas/Plantillas.cshtml
+++ b/WebApp/Views/Plantillas/Plantillas.cshtml
@@ -9,6 +9,7 @@
 <link href="~/lib/grapesjs-preset-webpage/dist/grapesjs-preset-webpage.min.css" rel="stylesheet" />
 <script src="~/js/grapes.min.js"></script>
 <script src="~/lib/grapesjs-preset-webpage/dist/grapesjs-preset-webpage.min.js"></script>
+
 <style>
     body,
     html {
@@ -36,11 +37,7 @@
 </style>
 
 <div id="gjs" style="height:0px; overflow:hidden">
-    <link href="~/lib/bootstrap/dist/css/bootstrap.css" rel="stylesheet" />
-
-
-    @*VISTA PRINCIPAL*@
-
+    <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css">
 
     <div class="container">
         <div class="row">
@@ -63,10 +60,7 @@
                             </li>
                             <li class="w3_mobamu_twitter">
                                 <a href="#">
-                                    <span class="icon-twitter">
-                                        <i class="fab fa-twitter" style="        font-size: 15px;
-"></i>
-                                    </span>
+                                    <span class="icon-twitter"><i class="fab fa-twitter" style="font-size: 15px;"></i></span>
                                 </a>
                             </li>
                             <li class="w3_mobamu_dribble">
@@ -191,7 +185,7 @@
     </footer>
 
 
-    @*NOSOTROS*@
+
 
 
     <div class="container">
@@ -255,7 +249,7 @@
                     </li>
                     <li class="nav-item active item-efec text-center ">
                         <div class="xx">
-                            <a class="nav-link" href="productos.html">Catalogo</a>
+                            <a class="nav-link" href="catalogo.html">Catalogo</a>
                         </div>
                     </li>
                     <li class="nav-item active item-efec text-center ">
@@ -275,25 +269,67 @@
         </nav>
     </div>
 
-    <div class="container mt-5">
+    <div class="container">
         <div class="row">
-            <div class="col-md-3">
-
+            <div class="col-md-4 shadow mt-4" style="font-size: auto;">
+                <img class="img-fluid" src="~/img/Empacados/1.jpg" alt="">
+                <hr style="border: solid 1px black;" class="mb-2">
+                <p class="mb-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Est, quis consequatur laborum, nulla eius velit voluptate, itaque dolorem perspiciatis distinctio molestias quod harum placeat obcaecati necessitatibus autem voluptates vitae? Sapiente?</p>
+                <form>
+                    <script src="https://checkout.epayco.co/checkout.js"
+                            class="epayco-button"
+                            data-epayco-key="46eba625c121b7cdd75122e8c0b13822"
+                            data-epayco-amount="5000"
+                            data-epayco-name="ASUS VivoBook S15"
+                            data-epayco-description="Computadora portátil"
+                            data-epayco-currency="cop"
+                            data-epayco-country="co"
+                            data-epayco-test="true"
+                            data-epayco-external="false"
+                            data-epayco-response="https://ejemplo.com/respuesta.html"
+                            data-epayco-confirmation="https://ejemplo.com/confirmacion">
+                    </script>
+                </form>
             </div>
-            <div class="col-md-6 text-center shadow px-3 py-3 xx ">
-                <label for=""><h1>Nuestra Empresa</h1></label><br>
-                Contrary to popular belief, Lorem Ipsum is not simply<br>
-                random text. It has roots in a piece of classical Latin<br>
-                literature from 45 BC, making it over 2000 years old.<br>
-                Richard McClintock, a Latin professor at Hamp-<br>
-                den-Sydney College in Virginia, looked up one of<br>
-                the more obscure Latin words, consectetur, from a<br>
-                Lorem Ipsum passage, and going through the cites of<br>
-                the word in classical literature, discovered the un-<br>
-                doubtable source.
+            <div class="col-md-4 shadow mt-4">
+                <img class="img-fluid" src="~/img/Empacados/2.jpg" alt="">
+                <hr style="border: solid 1px black;" class="mb-2">
+                <p class="mb-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Est, quis consequatur laborum, nulla eius velit voluptate, itaque dolorem perspiciatis distinctio molestias quod harum placeat obcaecati necessitatibus autem voluptates vitae? Sapiente?</p>
+                <form>
+                    <script src="https://checkout.epayco.co/checkout.js"
+                            class="epayco-button"
+                            data-epayco-key="46eba625c121b7cdd75122e8c0b13822"
+                            data-epayco-amount="5000"
+                            data-epayco-name="ASUS VivoBook S15"
+                            data-epayco-description="Computadora portátil"
+                            data-epayco-currency="cop"
+                            data-epayco-country="co"
+                            data-epayco-test="true"
+                            data-epayco-external="false"
+                            data-epayco-response="https://ejemplo.com/respuesta.html"
+                            data-epayco-confirmation="https://ejemplo.com/confirmacion">
+                    </script>
+                </form>
             </div>
-            <div class="col-md-3">
-
+            <div class="col-md-4 shadow mt-4">
+                <img class="img-fluid" src="~/img/Empacados/3.jpg" alt="">
+                <hr style="border: solid 1px black;" class="mb-2">
+                <p class="mb-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Est, quis consequatur laborum, nulla eius velit voluptate, itaque dolorem perspiciatis distinctio molestias quod harum placeat obcaecati necessitatibus autem voluptates vitae? Sapiente?</p>
+                <form>
+                    <script src="https://checkout.epayco.co/checkout.js"
+                            class="epayco-button"
+                            data-epayco-key="46eba625c121b7cdd75122e8c0b13822"
+                            data-epayco-amount="5000"
+                            data-epayco-name="ASUS VivoBook S15"
+                            data-epayco-description="Computadora portátil"
+                            data-epayco-currency="cop"
+                            data-epayco-country="co"
+                            data-epayco-test="true"
+                            data-epayco-external="false"
+                            data-epayco-response="https://ejemplo.com/respuesta.html"
+                            data-epayco-confirmation="https://ejemplo.com/confirmacion">
+                    </script>
+                </form>
             </div>
         </div>
     </div>
@@ -305,7 +341,7 @@
             <div class="row footer-top">
                 <div class="col-lg-4 col-md-4 footer-grid_section_1its">
                     <h3 class="logo-2 mb-lg-4 mb-3 xx">
-                        Bogota
+                        Bogotá
                     </h3>
                     <!-- Map -->
                     <div class="map-fo">
@@ -323,7 +359,7 @@
                             <a href="nosotros.html" style="color: white;">Nosotros</a>
                         </li>
                         <li class="mb-4">
-                            <a href="productos.html" style="color: white;">Catalogo</a>
+                            <a href="productos.html" style="color: white;">Catálogo</a>
                         </li>
                         <li class="mb-4">
                             <a href="servicios.html" style="color: white;">Contacto</a>
@@ -331,10 +367,10 @@
                     </ul>
                 </div>
                 <div class="col-lg-4 col-md-4 footer-grid_section_1its mt-lg-0 mt-4">
-                    <h3 class="mb-lg-4 mb-3 xx">Contactenos</h3>
+                    <h3 class="mb-lg-4 mb-3 xx">Contáctenos</h3>
                     <div class="contact-info">
                         <div class="footer-style-w3ls mb-4">
-                            <h4 class="text-li mb-2">Telefono</h4>
+                            <h4 class="text-li mb-2">Teléfono</h4>
                             <p>(+57) 304-334-3430</p>
                         </div>
                         <div class="footer-style-w3ls mb-4">
@@ -342,8 +378,8 @@
                             <p><a href="mailto:info@example.com" style="color: white;">diegopedraza888@gmail.com</a></p>
                         </div>
                         <div class="footer-style-w3ls">
-                            <h4 class="text-li mb-2">Localizacion</h4>
-                            <p>Soacha, Boyaca, Colombia</p>
+                            <h4 class="text-li mb-2">Localización</h4>
+                            <p>Soacha, Boyacá, Colombia</p>
                         </div>
                     </div>
                 </div>
@@ -352,7 +388,6 @@
     </footer>
 
 
-    @*CONTACTO*@
 
 
     <div class="container">
@@ -515,7 +550,6 @@
     </footer>
 
 
-    @*CATÁLOGO*@
 
 
     <div class="container">
@@ -579,7 +613,7 @@
                     </li>
                     <li class="nav-item active item-efec text-center ">
                         <div class="xx">
-                            <a class="nav-link" href="catalogo.html">Catalogo</a>
+                            <a class="nav-link" href="productos.html">Catalogo</a>
                         </div>
                     </li>
                     <li class="nav-item active item-efec text-center ">
@@ -599,68 +633,25 @@
         </nav>
     </div>
 
-    <div class="container">
+    <div class="container mt-5">
         <div class="row">
-            <div class="col-md-4 shadow mt-4" style="font-size: auto;">
-                <img class="img-fluid" src="~/img/Empacados/1.jpg" alt="">
-                <hr style="border: solid 1px black;" class="mb-2">
-                <p class="mb-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Est, quis consequatur laborum, nulla eius velit voluptate, itaque dolorem perspiciatis distinctio molestias quod harum placeat obcaecati necessitatibus autem voluptates vitae? Sapiente?</p>
+            <div class="col-md-3">
 
-                <form>
-                    <script src="https://checkout.epayco.co/checkout.js"
-                            class="epayco-button"
-                            data-epayco-key="a512d662411070c334c80503c0479156"
-                            data-epayco-amount="3.000.000"
-                            data-epayco-name="ASUS VivoBook S15"
-                            data-epayco-description="Computadora portátil"
-                            data-epayco-currency="cop"
-                            data-epayco-country="co"
-                            data-epayco-test="true"
-                            data-epayco-external="false"
-                            data-epayco-response="https://ejemplo.com/respuesta.html"
-                            data-epayco-confirmation="https://ejemplo.com/confirmacion">
-                    </script>
-                </form>
             </div>
-            <div class="col-md-4 shadow mt-4">
-                <img class="img-fluid" src="~/img/Empacados/2.jpg" alt="">
-                <hr style="border: solid 1px black;" class="mb-2">
-                <p class="mb-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Est, quis consequatur laborum, nulla eius velit voluptate, itaque dolorem perspiciatis distinctio molestias quod harum placeat obcaecati necessitatibus autem voluptates vitae? Sapiente?</p>
-                <form>
-                    <script src="https://checkout.epayco.co/checkout.js"
-                            class="epayco-button"
-                            data-epayco-key="a512d662411070c334c80503c0479156"
-                            data-epayco-amount="3.000.000"
-                            data-epayco-name="ASUS VivoBook S15"
-                            data-epayco-description="Computadora portátil"
-                            data-epayco-currency="cop"
-                            data-epayco-country="co"
-                            data-epayco-test="true"
-                            data-epayco-external="false"
-                            data-epayco-response="https://ejemplo.com/respuesta.html"
-                            data-epayco-confirmation="https://ejemplo.com/confirmacion">
-                    </script>
-                </form>
+            <div class="col-md-6 text-center shadow px-3 py-3 xx ">
+                <label for=""><h1>Nuestra Empresa</h1></label><br>
+                Contrary to popular belief, Lorem Ipsum is not simply<br>
+                random text. It has roots in a piece of classical Latin<br>
+                literature from 45 BC, making it over 2000 years old.<br>
+                Richard McClintock, a Latin professor at Hamp-<br>
+                den-Sydney College in Virginia, looked up one of<br>
+                the more obscure Latin words, consectetur, from a<br>
+                Lorem Ipsum passage, and going through the cites of<br>
+                the word in classical literature, discovered the un-<br>
+                doubtable source.
             </div>
-            <div class="col-md-4 shadow mt-4">
-                <img class="img-fluid" src="~/img/Empacados/3.jpg" alt="">
-                <hr style="border: solid 1px black;" class="mb-2">
-                <p class="mb-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Est, quis consequatur laborum, nulla eius velit voluptate, itaque dolorem perspiciatis distinctio molestias quod harum placeat obcaecati necessitatibus autem voluptates vitae? Sapiente?</p>
-                <form>
-                    <script src="https://checkout.epayco.co/checkout.js"
-                            class="epayco-button"
-                            data-epayco-key="a512d662411070c334c80503c0479156"
-                            data-epayco-amount="3.000.000"
-                            data-epayco-name="ASUS VivoBook S15"
-                            data-epayco-description="Computadora portátil"
-                            data-epayco-currency="cop"
-                            data-epayco-country="co"
-                            data-epayco-test="true"
-                            data-epayco-external="false"
-                            data-epayco-response="https://ejemplo.com/respuesta.html"
-                            data-epayco-confirmation="https://ejemplo.com/confirmacion">
-                    </script>
-                </form>
+            <div class="col-md-3">
+
             </div>
         </div>
     </div>
@@ -672,7 +663,7 @@
             <div class="row footer-top">
                 <div class="col-lg-4 col-md-4 footer-grid_section_1its">
                     <h3 class="logo-2 mb-lg-4 mb-3 xx">
-                        Bogotá
+                        Bogota
                     </h3>
                     <!-- Map -->
                     <div class="map-fo">
@@ -690,7 +681,7 @@
                             <a href="nosotros.html" style="color: white;">Nosotros</a>
                         </li>
                         <li class="mb-4">
-                            <a href="productos.html" style="color: white;">Catálogo</a>
+                            <a href="productos.html" style="color: white;">Catalogo</a>
                         </li>
                         <li class="mb-4">
                             <a href="servicios.html" style="color: white;">Contacto</a>
@@ -698,10 +689,10 @@
                     </ul>
                 </div>
                 <div class="col-lg-4 col-md-4 footer-grid_section_1its mt-lg-0 mt-4">
-                    <h3 class="mb-lg-4 mb-3 xx">Contáctenos</h3>
+                    <h3 class="mb-lg-4 mb-3 xx">Contactenos</h3>
                     <div class="contact-info">
                         <div class="footer-style-w3ls mb-4">
-                            <h4 class="text-li mb-2">Teléfono</h4>
+                            <h4 class="text-li mb-2">Telefono</h4>
                             <p>(+57) 304-334-3430</p>
                         </div>
                         <div class="footer-style-w3ls mb-4">
@@ -709,8 +700,8 @@
                             <p><a href="mailto:info@example.com" style="color: white;">diegopedraza888@gmail.com</a></p>
                         </div>
                         <div class="footer-style-w3ls">
-                            <h4 class="text-li mb-2">Localización</h4>
-                            <p>Soacha, Boyacá, Colombia</p>
+                            <h4 class="text-li mb-2">Localizacion</h4>
+                            <p>Soacha, Boyaca, Colombia</p>
                         </div>
                     </div>
                 </div>
@@ -718,10 +709,11 @@
         </div>
     </footer>
 
-    <script src="~/lib/bootstrap/dist/js/fontawesome.min.js"></script>
-    <script src="~/lib/jquery/dist/jquery-3.4.1.js"></script>
-    <script src="~/lib/bootstrap/dist/js/bootstrap.js"></script>
-    <script src="~/lib/bootstrap/dist/js/popper.min.js"></script>
+
+    <script src="~/lib/jquery/dist/jquery-3.4.1.min.js"></script>
+    <script src="~/lib/jquery/dist/jquery-3.4.1.slim.min.js"></script>
+    <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+
     <style>
         @@font-face {
             font-family: caviar;
@@ -854,6 +846,7 @@
             }
     </style>
 </div>
+
 
 <script type="text/javascript">
     var editor = grapesjs.init({
